deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: hausmate
  name: hausmate
spec:
  replicas: 1
  selector:
    matchLabels:
      run: hausmate
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: hausmate
    spec:
      containers:
      - command:
        - /cloud_sql_proxy
        - --dir=/cloudsql
        - -instances=hausmate-185516:us-east1:hausmate-db=tcp:3306
        - -credential_file=/secrets/cloudsql/credentials.json
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        imagePullPolicy: IfNotPresent
        name: cloudsql-proxy
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /secrets/cloudsql
          name: cloudsql-instance-credentials
          readOnly: true
        - mountPath: /etc/ssl/certs
          name: ssl-certs
        - mountPath: /cloudsql
          name: cloudsql
      - env:
        - name: DB_USER
          valueFrom:
            secretKeyRef:
              key: username
              name: cloudsql-db-credentials
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: cloudsql-db-credentials
        - name: DB_HOST
          value: 127.0.0.1
        - name: DB_PORT
          value: "3306"
        - name: DB_ENGINE
          value: django.db.backends.postgresql_psycopg2
        - name: DB_USER
          value: proxyuser
        - name: DB_NAME
          value: postgres
        - name: DJANGO_DEBUG
          value: "False"
        - name: DJANGO_SETTINGS_MODULE
          value: settings.base
        - name: GS_BUCKET_NAME
          value: hausmate
        - name: GS_PROJECT_NAME
          value: hausmate-185516
        - name: STATIC_URL
          value: https://storage.googleapis.com/hausmate/
        - name: STATICFILES_STORAGE
          value: storages.backends.gcloud.GoogleCloudStorage
        - name: GOOGLE_APPLICATION_CREDENTIALS
          value: /var/secrets/google/key.json
        volumeMounts:
        - name: google-cloud-key
          mountPath: /var/secrets/google
        image: gcr.io/hausmate-185516/hausmate:v5
        imagePullPolicy: Always
        name: hausmate
        ports:
        - containerPort: 8000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          defaultMode: 420
          secretName: cloudsql-instance-credentials
      - emptyDir: {}
        name: cloudsql
      - hostPath:
          path: /etc/ssl/certs
        name: ssl-certs
      - name: google-cloud-key
        secret:
          secretName: hausmate-key
