basic-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  rules:
  - http:
      paths:
      - path: /hausmate
        backend:
          serviceName: hausmate
          servicePort: 80
